<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.thesejongproject.customviews.SmartTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_top_bar"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/app_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.thesejongproject.customviews.SmartEditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="8dp"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingLeft="8dp"
                        android:textSize="15sp" />

                    <com.thesejongproject.customviews.SmartEditText
                        android:id="@+id/edtLastName"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingLeft="8dp"
                        android:textSize="15sp" />
                </LinearLayout>

                <com.thesejongproject.customviews.SmartEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:textSize="15sp" />

                <com.thesejongproject.customviews.SmartEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:textSize="15sp" />

                <com.thesejongproject.customviews.SmartEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:textSize="15sp" />

                <com.thesejongproject.customviews.SmartEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:textSize="15sp" />

                <com.thesejongproject.customviews.SmartTextView
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/btn_sign_in"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>