<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.thesejongproject.customviews.SmartTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_top_bar" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/error_message_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.thesejongproject.customviews.SmartTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/profile"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnHistory"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/error_message_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <com.thesejongproject.customviews.SmartTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/history"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnManualMode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/error_message_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <com.thesejongproject.customviews.SmartTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/manual"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAutoMode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/error_message_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.thesejongproject.customviews.SmartTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/auto"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnQuickTutorial"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/error_message_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <com.thesejongproject.customviews.SmartTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/quick_tutorial"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/error_message_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <com.thesejongproject.customviews.SmartTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/privacy_policy"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

    </LinearLayout>

    <com.thesejongproject.customviews.SmartTextView
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/error_message_bg"
        android:gravity="center"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>