<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:visibility="gone"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.thesejongproject.customviews.SmartTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/privacy_policy"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_top_bar"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <WebView
            android:id="@+id/wvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </WebView>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/agree_to_policy" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/btnAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.thesejongproject.customviews.SmartTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_quit"
                    android:gravity="center"
                    android:text="@string/agree"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>